--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -71,24 +71,18 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/BtnBlue"
                 android:id="@+id/search_button"
-                android:onClick="@{()->activity.searching()}"
+                android:onClick="@{()->viewModel.searching()}"
                 android:text="@string/search"/>
 
         </LinearLayout>
-
-        <TextView
-            android:text="Test"
-            android:id="@+id/TestTV"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </TextView>
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+            tools:listitem="@layout/item_search_result">
 
         </androidx.recyclerview.widget.RecyclerView>
 
