--- a/app/src/main/res/layout/item_search_result.xml
+++ b/app/src/main/res/layout/item_search_result.xml
@@ -3,13 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-<!--        <data>-->
-<!--            <import type="com.flow.moviesearchflowhomework.presentation.util.ViewExtensionKt"/>-->
-
-<!--            <variable-->
-<!--                name="searchList"-->
-<!--                type="com.flow.moviesearchflowhomework.domain.entity.SearchItem" />-->
-<!--        </data>-->
+        <data>
+            <variable
+                name="BookItem"
+                type="com.example.booksearchingusingnaverapi.search.BookItem" />
+        </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -32,9 +30,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:src="@drawable/bookimg"/>
-            <!--            app:loadRemoteRoundedImage="@{searchList.image}"-->
-            <!--            tools:src="@drawable/bookMain" />-->
+                android:src="@{BookItem.image}"
+                tools:src="@drawable/bookimg"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -51,9 +48,12 @@
                     android:id="@+id/tv_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:maxLines="1"
                     android:ellipsize="end"
+                    android:includeFontPadding="false"
                     android:fontFamily="@font/notosanskr_black"
                     android:textColor="@color/black"
+                    android:text="@{BookItem.title}"
                     tools:text="제목" />
 
                 <TextView
@@ -61,24 +61,31 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/notosanskr_medium"
+                    android:includeFontPadding="false"
                     android:textColor="@color/black"
-                    tools:text="저자 : 히가시노게이고" />
+                    tools:text="저자 : 히가시노게이고"
+                    android:text="@{@string/header_author(BookItem.author)}"/>
+<!--                    android:text="@{BookItem.author}"/>-->
 
                 <TextView
                     android:id="@+id/tv_publisher"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/notosanskr_regular"
+                    android:includeFontPadding="false"
                     android:textColor="@color/black"
-                    tools:text="출판사 : abcd" />
+                    tools:text="출판사 : abcd"
+                    android:text="@{@string/header_publisher(BookItem.publisher)}"/>
 
                 <TextView
                     android:id="@+id/tv_discount"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/notosanskr_regular"
+                    android:includeFontPadding="false"
                     android:textColor="@color/black"
-                    tools:text="가격:12345" />
+                    tools:text="가격:12345"
+                    android:text="@{@string/header_discount(String.valueOf(BookItem.discount))}"/>
             </LinearLayout>
         </LinearLayout>
 
