--- a/app/src/main/res/layout/activity_recent_keyword.xml
+++ b/app/src/main/res/layout/activity_recent_keyword.xml
@@ -39,6 +39,7 @@
         </com.google.android.material.appbar.MaterialToolbar>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_recntkeywork"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@+id/appbar"
