--- a/app/src/main/res/layout/item_resent_keywork.xml
+++ b/app/src/main/res/layout/item_resent_keywork.xml
@@ -42,12 +42,14 @@
             android:id="@+id/tv_create_at"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="작성예정"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:text="작성예정"
             app:layout_constraintEnd_toStartOf="@+id/iv_keyword_delete"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="04. 18." />
 
+
+<!--        android:text="@{recentKeyword.createdAt.toLocalDate().toString()}"-->
         <ImageView
             android:id="@+id/iv_keyword_delete"
             android:layout_width="wrap_content"
