--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -8,6 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/appbar"
             android:layout_width="match_parent"
@@ -18,25 +19,28 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:navigationIcon="@drawable/ic_back" >
+            app:navigationIcon="@drawable/ic_back">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textSize="22sp"
-                android:text="@string/recent_search"
-                android:textColor="@color/white"
+                android:fontFamily="@font/notosanskr_black"
                 android:includeFontPadding="false"
-                android:fontFamily="@font/notosanskr_black"/>
+                android:text="@string/show_wv"
+                android:textColor="@color/white"
+                android:textSize="22sp" />
         </com.google.android.material.appbar.MaterialToolbar>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_recntkeywork"
+        <WebView
+            android:id="@+id/webView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/appbar"
-            android:layout_margin="10dp"
-            tools:listitem="@layout/item_resent_keywork">
-        </androidx.recyclerview.widget.RecyclerView>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/appbar">
+
+        </WebView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
