--- a/app/src/main/res/layout/item_resent_keywork.xml
+++ b/app/src/main/res/layout/item_resent_keywork.xml
@@ -2,9 +2,9 @@
 <layout>
 
     <data>
-<!--        <variable-->
-<!--            name=""-->
-<!--            type="" />-->
+        <variable
+            name="recentKeyword"
+            type="com.example.booksearchingusingnaverapi.search.RecentSearch" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -31,7 +31,7 @@
             android:layout_marginEnd="15dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="작성예정"
+            android:text="@{recentKeyword.keyword}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/tv_create_at"
             app:layout_constraintStart_toEndOf="@+id/iv_search"
@@ -43,7 +43,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:text="작성예정"
+            android:text="@{String.valueOf(recentKeyword.createdAt)}"
             app:layout_constraintEnd_toStartOf="@+id/iv_keyword_delete"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="04. 18." />
