--- a/app/src/main/res/layout/item_resent_keywork.xml
+++ b/app/src/main/res/layout/item_resent_keywork.xml
@@ -43,7 +43,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:text="@{String.valueOf(recentKeyword.createdAt)}"
+            android:formattedDate="@{recentKeyword.createdAt}"
             app:layout_constraintEnd_toStartOf="@+id/iv_keyword_delete"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="04. 18." />
